--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,10 @@
 
 @layer base {
   body {
-    @apply bg-[#2e2e2e] text-lightning font-JetBrains transition-all;
+    @apply bg-[#2e2e2e] text-lightning font-JetBrains transition-all m-0 p-0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
   body.lightning {
     @apply bg-[#eeeeee] text-darken font-JetBrains transition-all;
