--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,116 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,500,700");
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #313f47;
+  font-family: "Source Sans Pro";
+  animation: starting 3s ease-in-out;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: #313f47;
+  transition: 0.5s ease-in-out;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.box {
+  width: 500px;
+  height: 600px;
+  background: white;
+  transform: rotate(0);
+  border-radius: 0.625rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  opacity: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  animation: rotateAnimation 1s ease-in-out 0.5s forwards;
+}
+.box::before {
+  position: absolute;
+  content: "";
+  width: 90%;
+  height: 1px;
+  background: #c8cccf;
+  z-index: -1;
+  top: 36%;
+}
+.box::after {
+  position: absolute;
+  content: "";
+  width: 209px;
+  aspect-ratio: 1/1;
+  background: url("../public/textanim.svg") no-repeat center center;
+  z-index: 1;
+  top: 110px;
+  animation: spin 20s linear infinite;
+}
+.box img {
+  object-fit: cover;
+  box-shadow: 0 0 0 1.5em #fff;
+  border-radius: 50%;
+  position: relative;
+  pointer-events: none;
+}
+.box__texts {
+  text-align: center;
+  margin: 2.5rem 0;
+}
+.box__texts h1 {
+  font-weight: 700;
+  font-size: 2rem;
+}
+.box__texts h3 {
+  font-weight: 300;
+}
+.box__social_links {
+  font-size: 1.5rem;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.box__social_links:has(a:hover) a:not(:hover) {
+  filter: blur(1px);
+  opacity: 0.2;
+}
+
+@keyframes starting {
+  from {
+    background: black;
+  }
+  to {
+    background: white;
   }
 }
+@keyframes rotateAnimation {
+  from {
+    transform: rotatex(45deg);
+    opacity: 0;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  }
+  to {
+    transform: rotatex(0);
+    opacity: 1;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
