--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,500,700");
+
 * {
   margin: 0;
   padding: 0;
@@ -44,17 +45,14 @@ a {
   z-index: -1;
   top: 36%;
 }
-.box::after {
-  position: absolute;
-  content: "";
-  width: 209px;
-  aspect-ratio: 1/1;
-  background: url("../public/textanim.svg") no-repeat center center;
+.spinImage {
   z-index: 1;
-  top: 110px;
-  animation: spin 20s linear infinite;
+  position: absolute;
+  top: 91px;
+  animation: spin 15s linear infinite;
 }
-.box img {
+
+.box img.profileImage {
   object-fit: cover;
   box-shadow: 0 0 0 1.5em #fff;
   border-radius: 50%;
