--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,500,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css");
 
 * {
   margin: 0;
@@ -49,9 +50,9 @@ a {
   z-index: 1;
   position: absolute;
   top: 91px;
-  animation: spin 15s linear infinite;
+  animation: spin 15s linear 2s infinite;
+  opacity: 0;
 }
-
 .box img.profileImage {
   object-fit: cover;
   box-shadow: 0 0 0 1.5em #fff;
@@ -103,10 +104,18 @@ a {
   }
 }
 @keyframes spin {
-  from {
+  0% {
+    opacity: 0;
     transform: rotate(0deg);
   }
-  to {
+
+  10%,
+  60% {
+    opacity: 1;
+  }
+  90%,
+  100% {
+    opacity: 0;
     transform: rotate(360deg);
   }
 }
