--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&display=swap");
+
 html {
   font-size: var(--resetRem);
 }
@@ -33,6 +34,7 @@ a {
   text-decoration: none;
   transition: color 500ms ease;
 }
+
 a:hover {
   color: var(--lightning);
 }
@@ -49,6 +51,7 @@ a:hover {
   gap: 1rem;
   transition: all 500ms ease;
 }
+
 .btn-primary:hover {
   transform: scale(1.02);
 }
@@ -112,24 +115,29 @@ p {
   ul.nav-desktop {
     display: flex !important;
   }
+
   ul.nav-mobile {
     display: none !important;
   }
 }
+
 @media (max-width: 76.8rem) {
   ul.nav-desktop {
     display: none !important;
   }
+
   ul.nav-mobile {
     display: flex !important;
   }
 }
+
 header {
   height: 10rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 header nav {
   display: flex;
   justify-content: space-between;
@@ -137,12 +145,14 @@ header nav {
   width: 100%;
   padding: 0 2rem;
 }
+
 header nav .get-in-touch {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
+
 header nav .get-in-touch ion-icon {
   color: var(--default);
   width: 2.2rem;
@@ -152,33 +162,40 @@ header nav .get-in-touch ion-icon {
   border-radius: 50%;
   border: 2px solid rgba(154, 154, 154, 0.2);
 }
+
 header nav ul.nav-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
+
 header nav ul.nav-desktop a:hover {
   color: var(--lightning);
 }
+
 header nav ul.nav-mobile {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
+
 header nav ul.nav-mobile ion-icon {
   color: var(--default);
   width: 2.2rem;
   height: 2.2rem;
   transition: var(--fade-colors);
 }
+
 header nav ul.nav-mobile ion-icon:hover {
   color: white;
 }
+
 header nav ul.nav-mobile a {
   transition: var(--fade-colors);
 }
+
 header nav ul.nav-mobile a:hover {
   color: white;
 }
@@ -192,23 +209,26 @@ header nav ul.nav-mobile a:hover {
   justify-content: space-evenly;
   align-items: center;
 }
+
 .hero img:first-child {
   border-radius: 50%;
-  width: 12rem;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   aspect-ratio: 1/1;
   filter: grayscale(0.8);
 }
+
 .hero .hero--name {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
 }
+
 .hero .hero--name img {
   width: 2rem;
 }
+
 .hero h1 {
   line-height: 6.5rem;
 }
@@ -220,15 +240,18 @@ header nav ul.nav-mobile a:hover {
   gap: 4rem;
   min-height: 60rem;
 }
+
 .proficiency h2 {
   line-height: 4rem;
 }
+
 .proficiency .cards {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(26rem, 26rem));
   gap: 1rem;
 }
+
 .proficiency .cards .card {
   min-height: 34.6rem;
   display: flex;
@@ -253,6 +276,7 @@ header nav ul.nav-mobile a:hover {
 footer {
   margin: 4rem 0;
 }
+
 footer nav {
   display: flex;
   justify-content: space-between;
@@ -260,33 +284,42 @@ footer nav {
   width: 100%;
   padding: 0 2rem;
 }
+
 footer nav ul.nav-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
+
 footer nav ul.nav-desktop a:hover {
   color: var(--lightning);
 }
+
 footer nav ul.nav-mobile {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
+
 footer nav ul.nav-mobile a {
   transition: var(--fade-colors);
 }
+
 footer nav ul.nav-mobile a:hover {
   color: white;
 }
+
 footer nav ul.nav-mobile ion-icon {
   color: var(--default);
   width: 2.2rem;
   height: 2.2rem;
   transition: var(--fade-colors);
 }
+
 footer nav ul.nav-mobile ion-icon:hover {
   color: white;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
