--- a/sass/components/_responsivity.scss
+++ b/sass/components/_responsivity.scss
@@ -16,4 +16,12 @@
   ul.nav-mobile {
     display: flex !important;
   }
+
+  .proficiency .cards {
+    padding: 0 1rem !important;
+  }
+
+  .cards-portfolio {
+    padding: 0 1rem !important;
+  }
 }
