--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&display=swap");
+@property --gradient-angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+:root {
+  --clr-1: #002029;
+  --clr-2: #00303d;
+  --clr-3: #004052;
+  --clr-4: #005066;
+  --clr-5: #cc803a;
+  --gap: 3rem;
+}
+
 html {
   font-size: var(--resetRem);
 }
@@ -68,6 +82,22 @@ a:hover {
   border-bottom: 1px solid rgba(154, 154, 154, 0.1);
 }
 
+.grid {
+  display: grid;
+}
+
+.columns-200 {
+  grid-template-columns: repeat(auto-fit, minmax(200px, max-content));
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
 :root {
   --resetRem: 62.5%;
   --bgColor: var(--darkness);
@@ -75,8 +105,132 @@ a:hover {
   --lightning: #fff;
   --default: #8a8a8a;
   --h5: #9a9a9a;
-  --gradientBG: linear-gradient(97.13deg, #e9e9e9 0%, #515151 100%);
+  --gradientBG: linear-gradient(97.13deg, #e9e9e9 0%, #494949 100%);
   --fade-colors: color 500ms ease;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-space-between {
+  justify-content: space-between;
+}
+
+.justify-space-around {
+  justify-content: space-around;
+}
+
+.justify-space-evenly {
+  justify-content: space-evenly;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.align-end {
+  align-items: end;
+}
+
+.align-start {
+  align-items: start;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.gap-2 {
+  gap: 2rem;
+}
+
+.gap-3 {
+  gap: 3rem;
+}
+
+.gap-4 {
+  gap: 4rem;
+}
+
+.px-1 {
+  padding: 0 1rem;
+}
+
+.py-1 {
+  padding: 1rem 0;
+}
+
+.pb-1 {
+  padding: 0 0 1rem 0;
+}
+
+.pt-1 {
+  padding: 1rem 0 0 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.px-2 {
+  padding: 0 2rem;
+}
+
+.py-2 {
+  padding: 2rem 0;
+}
+
+.pb-2 {
+  padding: 0 0 2rem 0;
+}
+
+.pt-2 {
+  padding: 2rem 0 0 0;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.px-3 {
+  padding: 0 3rem;
+}
+
+.py-3 {
+  padding: 3rem 0;
+}
+
+.pb-3 {
+  padding: 0 0 3rem 0;
+}
+
+.pt-3 {
+  padding: 3rem 0 0 0;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.px-4 {
+  padding: 0 4rem;
+}
+
+.py-4 {
+  padding: 4rem 0;
+}
+
+.pb-4 {
+  padding: 0 0 4rem 0;
+}
+
+.pt-4 {
+  padding: 4rem 0 0 0;
+}
+
+.p-4 {
+  padding: 4rem;
 }
 
 h1 {
@@ -108,6 +262,16 @@ p {
   -webkit-text-fill-color: transparent;
 }
 
+@media (max-width: 460px) {
+  h1 {
+    font-size: 3.5rem;
+    line-height: 3.5rem !important;
+  }
+  h2 {
+    font-size: 1.8rem;
+    line-height: 2rem !important;
+  }
+}
 @media (min-width: 76.8rem) {
   ul.nav-desktop {
     display: flex !important;
@@ -122,6 +286,12 @@ p {
   }
   ul.nav-mobile {
     display: flex !important;
+  }
+  .proficiency .cards {
+    padding: 0 1rem !important;
+  }
+  .cards-portfolio {
+    padding: 0 1rem !important;
   }
 }
 header {
@@ -185,12 +355,12 @@ header nav ul.nav-mobile a:hover {
 
 .hero {
   text-align: center;
-  min-height: 50rem;
-  margin: 6rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  gap: var(--gap);
+  padding: 3rem 0;
 }
 .hero img:first-child {
   border-radius: 50%;
@@ -216,9 +386,7 @@ header nav ul.nav-mobile a:hover {
 .proficiency {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
-  gap: 4rem;
-  min-height: 60rem;
+  gap: var(--gap);
 }
 .proficiency h2 {
   line-height: 4rem;
@@ -226,7 +394,7 @@ header nav ul.nav-mobile a:hover {
 .proficiency .cards {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(26rem, 26rem));
+  grid-template-columns: repeat(auto-fit, minmax(26rem, max-content));
   gap: 1rem;
 }
 .proficiency .cards .card {
@@ -240,14 +408,63 @@ header nav ul.nav-mobile a:hover {
   gap: 2rem;
 }
 
+.portfolio {
+  padding: 3rem 0;
+}
+.portfolio .cards-portfolio {
+  grid-template-columns: repeat(auto-fill, minmax(366px, max-content));
+}
+.portfolio .cards-portfolio .card-portfolio {
+  aspect-ratio: 1.5/1;
+  border-radius: 0.5rem;
+  position: relative;
+  transition: 500ms ease-in-out all;
+  background: rgb(29, 29, 29);
+}
+.portfolio .cards-portfolio .card-portfolio::after {
+  filter: blur(0.5rem);
+}
+.portfolio .cards-portfolio .card-portfolio:hover {
+  border: 0px solid transparent;
+  background: var(--darkness);
+  transition: 500ms ease-in-out all;
+}
+.portfolio .cards-portfolio .card-portfolio:hover::before, .portfolio .cards-portfolio .card-portfolio:hover::after {
+  content: "";
+  transition: 500ms ease-in-out all;
+  position: absolute;
+  inset: -0.3rem;
+  background: conic-gradient(from var(--gradient-angle), var(--clr-3), var(--clr-4), var(--clr-5), var(--clr-4), var(--clr-3));
+  border-radius: inherit;
+  animation: rotation 2s linear infinite;
+  z-index: -1;
+}
+.portfolio .cards-portfolio img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  filter: grayscale(1);
+  transition: 500ms ease all;
+}
+.portfolio .cards-portfolio img:hover {
+  filter: grayscale(0);
+}
+@keyframes rotation {
+  0% {
+    --gradient-angle: 0deg;
+  }
+  100% {
+    --gradient-angle: 360deg;
+  }
+}
+
 .next-project {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
-  gap: 2rem;
-  min-height: 40rem;
+  gap: var(--gap);
 }
 
 footer {
