--- a/sass/components/_defaut.scss
+++ b/sass/components/_defaut.scss
@@ -8,8 +8,52 @@
   --lightning: #fff;
   --default: #8a8a8a;
   --h5: #9a9a9a;
-  --gradientBG: linear-gradient(97.13deg, #e9e9e9 0%, #515151 100%);
+  --gradientBG: linear-gradient(97.13deg, #e9e9e9 0%, #494949 100%);
 
   // ANIMATIONS
   --fade-colors: color 500ms ease;
+}
+
+$justifyContent: center, space-between, space-around, space-evenly;
+$aligns: center, end, start;
+$gaps: 1, 2, 3, 4;
+
+@each $justify in $justifyContent {
+  .justify-#{$justify} {
+    justify-content: $justify;
+  }
+}
+
+@each $align in $aligns {
+  .align-#{$align} {
+    align-items: $align;
+  }
+}
+
+@each $gap in $gaps {
+  .gap-#{$gap} {
+    gap: $gap + rem;
+  }
+}
+
+@each $direction in $gaps {
+  .px-#{$direction} {
+    padding: 0 $direction + rem;
+  }
+
+  .py-#{$direction} {
+    padding: $direction + rem 0;
+  }
+
+  .pb-#{$direction} {
+    padding: 0 0 $direction + rem 0;
+  }
+
+  .pt-#{$direction} {
+    padding: $direction + rem 0 0 0;
+  }
+
+  .p-#{$direction} {
+    padding: $direction + rem;
+  }
 }
