--- a/sass/style.scss
+++ b/sass/style.scss
@@ -235,3 +235,11 @@ footer {
     }
   }
 }
+
+.changeText {
+  transition: 5000ms ease-in-out all;
+  cursor: pointer;
+  &:hover {
+    color: yellow;
+  }
+}
